--- a/index.html
+++ b/index.html
@@ -28,6 +28,36 @@
             </ul>
         </nav>
     </header>
+    <section class="subtite"></section>
+    <main>
+        <article id="about-me" class="about-me">
+            <img src="" alt="">
+            <h2>About Me</h2>
+            <p>
 
+            </p>    
+        </article>
+        <article id="work" class="work">
+            <img src="" alt="">
+            <h2>Work</h2>
+            <p>
+
+            </p>
+        </article>
+        <article id="contact-me" class="contact-me">
+            <img src="" alt="">
+            <h2>Contact Me</h2>
+            <p>
+
+            </p>
+        </article>
+        <article id="resume" class="resume">
+            <img src="" alt="">
+            <h2>Resume</h2>
+            <p>
+                
+            </p>
+        </article>  
+    </main>
 </body>
 </html>
