re-structuring html. created navbar w/buttons to sections

--- a/index.html
+++ b/index.html
@@ -5,28 +5,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Illuminate</title>
+    <title>About Me</title>
 </head>
 
 <body>
-    <header class="header">
-        <h1>Cecilia Garcia</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#about-me"></a>
-                </li>
-                <li>
-                    <a href="#work"></a>
-                </li>
-                <li>
-                    <a href="#contact-me"></a>
-                </li>
-                <li>
-                    <a href="#resume"></a>
-                </li>
-            </ul>
+    <div class="top">
+        <nav class="navbar">
+            <a href="#home" class="home-btn"><b>MAIN</b></a>
+            <div class="sections">
+                <a href="#about" class="btn">About</a>
+                <a href="#portfolio" class="btn">Portfolio</a>
+                <a href="#resume" class="btn">Resume</a>
+                <a href="#contact" class="btn">Contact</a>
+            </div>               
         </nav>
+    </div>
+
+    <header class="header">
+
     </header>
     <section class="subtite"></section>
     <main>
@@ -35,7 +31,7 @@
             <h2>About Me</h2>
             <p>
 
-            </p>    
+            </p>
         </article>
         <article id="work" class="work">
             <img src="" alt="">
@@ -55,9 +51,10 @@
             <img src="" alt="">
             <h2>Resume</h2>
             <p>
-                
+
             </p>
-        </article>  
+        </article>
     </main>
 </body>
+
 </html>
