added main image to page in header section

--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
         </nav>
     </div>
 
-    <header class="header">
-
+    <header class="header" style="max-width: 1500px;" id="home">
+        <img class="home-img" src="/assets/images/mountains.jpg" alt="mountains" width="1500" height="800">
     </header>
-    <section class="subtite"></section>
+
+  
     <main>
         <article id="about-me" class="about-me">
             <img src="" alt="">
