started about-me section

--- a/index.html
+++ b/index.html
@@ -25,15 +25,13 @@
         <img class="home-img" src="/assets/images/mountains.jpg" alt="mountains" width="1250" height="750">
     </header>
 
-  
-    <main>
-        <article id="about-me" class="about-me">
-            <img src="" alt="">
-            <h2>About Me</h2>
-            <p>
-
-            </p>
-        </article>
+    <main class="content" style="max-width: fit-content;">
+        <div class="about-me" id="about">
+               <img src="/assets/images/Ceci.jpg" alt="Ceci" style="width:25%">
+               <h2>Cecilia Garcia</h2>
+               <p>Native Texan with Mexican roots. I enjoy traveling and exploring,
+                outdoor adventures and activities, and love any and all kinds of music. </p>
+        </div>
         <article id="work" class="work">
             <img src="" alt="">
             <h2>Work</h2>
