created portfolio section and added images and links to the live pages

--- a/index.html
+++ b/index.html
@@ -26,19 +26,39 @@
     </header>
 
     <main class="content" style="max-width: fit-content;">
-        <div class="about-me" id="about">
-               <img src="/assets/images/Ceci.jpg" alt="Ceci" style="width:25%">
-               <h2>Cecilia Garcia</h2>
-               <p>Native Texan with Mexican roots. I enjoy traveling and exploring,
-                outdoor adventures and activities, and love any and all kinds of music. </p>
-        </div>
-        <article id="work" class="work">
-            <img src="" alt="">
-            <h2>Work</h2>
-            <p>
-
-            </p>
-        </article>
+        <section id="about">
+            <img src="/assets/images/Ceci.jpg" alt="Ceci" style="width:25%">
+            <div class="container">
+                <h2>Cecilia Garcia</h2>
+                <p>Native Texan with Mexican roots. I enjoy traveling and exploring,
+                 outdoor adventures and activities, and love any and all kinds of music. </p>
+            </div>
+        </section>
+        <section id="portfolio">
+                <h2>Portfolio</h2>
+                <div class="projects">
+                    <a href="https://ceci-00.github.io/Semantics/" class="card">
+                        <h3>Semantics</h3>
+                            <img src="/assets/images/Semantics.png" alt="Semantics" style="width:15%">
+                        </div>
+                    </a>
+                    <a href="https://ceci-00.github.io/Generate/" class="card">
+                        <h3>Password Generator</h3>
+                        <img src="/assets/images/Password-Generator.png" alt="Password-Generator" style="width:15%">
+                        </div>
+                    </a>
+                    <a href="https://github.com/ceci-00/Verbalize.git" class="card">
+                        <h3>README.md Generator</h3>
+                        <img src="/assets/images/readme-generator-screenshot.png" alt="README" style="width:15%">
+                        </div>
+                    </a>
+                    <a href="https://ceci-00.github.io/Scheduler/" class="card">
+                        <h3>Workday Scheduler</h3>
+                        <img src="/assets/images/Workday-Scheduler.png" alt="Workday-Scheduler" style="width:15%">
+                        </div>
+                    </a>
+                </div>
+        </section>
         <article id="contact-me" class="contact-me">
             <img src="" alt="">
             <h2>Contact Me</h2>
