created resume section in index.html. haven't attached actual pdf yet.

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
         <section id="about">
             <img src="/assets/images/Ceci.jpg" alt="Ceci" style="width:25%">
             <div class="container">
-                <h2>Cecilia Garcia</h2>
-                <p>Native Texan with Mexican roots. I enjoy traveling and exploring,
+                <h2>About Me</h2>
+                <p>My name is Cecilia, but you can call me Ceci for short (pronounced Seh-see. Not Cici like the pizza). I'm a native Texan with Mexican roots. I enjoy traveling and exploring,
                  outdoor adventures and activities, and love any and all kinds of music. </p>
             </div>
         </section>
@@ -59,13 +59,13 @@
                     </a>
                 </div>
         </section>
-        <article id="contact-me" class="contact-me">
-            <img src="" alt="">
-            <h2>Contact Me</h2>
-            <p>
-
-            </p>
-        </article>
+        <section id="resume">
+            <div class="container">
+                <a href="" class="btn">
+                    <h2>Resume</h2>
+                </a>
+            </div>
+        </section>
         <article id="resume" class="resume">
             <img src="" alt="">
             <h2>Resume</h2>
