created Contact Me section and attached google contact form w/link

--- a/index.html
+++ b/index.html
@@ -40,22 +40,18 @@
                     <a href="https://ceci-00.github.io/Semantics/" class="card">
                         <h3>Semantics</h3>
                             <img src="/assets/images/Semantics.png" alt="Semantics" style="width:15%">
-                        </div>
                     </a>
                     <a href="https://ceci-00.github.io/Generate/" class="card">
                         <h3>Password Generator</h3>
                         <img src="/assets/images/Password-Generator.png" alt="Password-Generator" style="width:15%">
-                        </div>
                     </a>
                     <a href="https://github.com/ceci-00/Verbalize.git" class="card">
                         <h3>README.md Generator</h3>
                         <img src="/assets/images/readme-generator-screenshot.png" alt="README" style="width:15%">
-                        </div>
                     </a>
                     <a href="https://ceci-00.github.io/Scheduler/" class="card">
                         <h3>Workday Scheduler</h3>
                         <img src="/assets/images/Workday-Scheduler.png" alt="Workday-Scheduler" style="width:15%">
-                        </div>
                     </a>
                 </div>
         </section>
@@ -66,13 +62,13 @@
                 </a>
             </div>
         </section>
-        <article id="resume" class="resume">
-            <img src="" alt="">
-            <h2>Resume</h2>
-            <p>
-
-            </p>
-        </article>
+        <section id="contact">
+            <div class="container">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSea2s2WbQJlL-EpYsy9452uakaaLIqZY7VhhkUsK-Cl_EQeXw/viewform?embedded=true" width="100%" height="872" frameborder="0" marginheight="0" marginwidth="0">
+                    <h2>Contact Me</h2>
+                </a>
+            </div>
+        </section>
     </main>
 </body>
 
